# deep-parser

./: .env.example  .gitignore  Dockerfile  PLAN.md  PROGRESS.md  README.md  TASK_1.2_SUMMARY.md  TASK_1_SUMMARY.md  alembic.ini  config.example.yaml  coverage.xml  docker-compose.yaml  prd-1.0.md  pyproject.toml
alembic/: env.py
config/: clean.yaml  embed.yaml  i2t.yaml  index.yaml  keywords.yaml  qa.yaml  split.yaml  summary.yaml
dags/: doc_etl_v1.py
src/deep_parser/: __init__.py  logging_config.py  main.py
src/deep_parser/api/: __init__.py  config_api.py  evaluate.py  jobs.py  loadtest.py  retrieve.py  upload.py
src/deep_parser/config/: __init__.py  settings.py  versioned_config.py
src/deep_parser/etl/: __init__.py  clean.py  embed.py  i2t.py  keywords.py  qa.py  split.py  summary.py
src/deep_parser/evaluation/: __init__.py  ragas_eval.py
src/deep_parser/hooks/: __init__.py  knowledge_graph.py
src/deep_parser/indexing/: __init__.py  clickhouse_indexer.py  es_indexer.py  index_manager.py  milvus_indexer.py
src/deep_parser/loadtest/: __init__.py  load_tester.py  locustfile.py
src/deep_parser/models/: __init__.py  asset.py  chunk.py  database.py  document.py  embedding.py  job.py
src/deep_parser/retrieval/: __init__.py  fusion.py  query_rewriter.py  retriever.py
src/deep_parser/services/: __init__.py  image_host.py  ingestion.py  llm_service.py  storage.py
src/deep_parser/webui/: __init__.py  routes.py
src/deep_parser/webui/templates/: base.html  config.html  evaluate.html  jobs.html  loadtest.html  search.html  upload.html
src/rag_testing_system/: __init__.py
src/rag_testing_system/config/: __init__.py  loader.py  models.py
src/rag_testing_system/document_processing/: __init__.py
src/rag_testing_system/evaluation/: __init__.py
src/rag_testing_system/performance/: __init__.py
src/rag_testing_system/retrieval/: __init__.py
src/rag_testing_system/storage/: __init__.py
src/rag_testing_system/utils/: __init__.py  logging.py
src/rag_testing_system/web/: __init__.py
src/rag_testing_system/workflow/: __init__.py
tests/: __init__.py  conftest.py  test_config.py  test_config_properties.py  test_logging.py
